Added match List

--- a/popup.html
+++ b/popup.html
@@ -42,7 +42,31 @@
 					<div class="row"><br/>
 						<div class="col-xs-12" id="panelBody"></div>
 					</div>
-					
+					<div class="row">
+						<div class="col-xs-12">
+							<div class="panel panel-default">
+								<div class="panel-heading">Match List</div>
+								<div class="panel-body">
+									<table id="tblMatchList" class="table">
+										<thead>
+											<tr>
+												<th>Match</th>
+												<th>Points</th>
+												<th></th>
+											</tr>
+											<tr>
+												<th><input type="text"></th>
+												<th><input type="number"></th>
+												<th><button>Add</button></th>
+											</tr>
+										</thead>
+										<tbody>
+										</tbody>
+									</table>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		    
