--- a/popup.html
+++ b/popup.html
@@ -3,13 +3,15 @@
 	<head>
 	    <title>Dice Data Extractor</title>
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
-	    <script src="jquery-1.12.0.min.js"></script>
-	    <script src="popup.js"></script>
 	    <link rel="stylesheet" href="css/bootstrap.min.css">
 	    <style>
 			#content {
 			    min-width: 500px;
 			    min-height: 200px;
+			}
+
+			a.btn {
+				display: inline;
 			}
 		</style>
 
@@ -45,8 +47,8 @@
 					<div class="row">
 						<div class="col-xs-12">
 							<div class="panel panel-default">
-								<div class="panel-heading">Match List</div>
-								<div class="panel-body">
+								<div class="panel-heading"> <a class="btn" id="btnToggleMatchList"><i class="glyphicon glyphicon-minus"></i></a> Match List</div>
+								<div id="pnlMatchList" class="panel-body">
 									<table id="tblMatchList" class="table">
 										<thead>
 											<tr>
@@ -55,9 +57,9 @@
 												<th></th>
 											</tr>
 											<tr>
-												<th><input type="text"></th>
-												<th><input type="number"></th>
-												<th><button>Add</button></th>
+												<th><input id="txtAddMatch" type="text" placeholder="enter match value"></th>
+												<th><input id="txtAddPoint" type="number" placeholder="enter point value"></th>
+												<th><button id="btnAddMatch">Add</button></th>
 											</tr>
 										</thead>
 										<tbody>
@@ -67,9 +69,60 @@
 							</div>
 						</div>
 					</div>
+					<div class="row">
+						<div class="col-xs-12">
+							<div class="panel panel-default">
+								<div class="panel-heading"> <a class="btn" id="btnTogglePriority"><i class="glyphicon glyphicon-minus"></i></a> Priority</div>
+								<div id="pnlPriority" class="panel-body">
+									<table id="tblPriority" class="table">
+										<thead>
+											<tr>
+												<th>Priority</th>
+												<th>Points</th>
+												<th></th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td>VERY HIGH</td>
+												<td>
+													<input type="number" id="PRIORITY_VERY_HIGH" class="txtPriority" />
+												</td>
+											</tr>
+											<tr>
+												<td>HIGH</td>
+												<td>
+													<input type="number" id="PRIORITY_HIGH" class="txtPriority" />
+												</td>
+											</tr>
+											<tr>
+												<td>MEDIUM</td>
+												<td>
+													<input type="number" id="PRIORITY_MEDIUM" class="txtPriority" />
+												</td>
+											</tr>
+											<tr>
+												<td>Low</td>
+												<td>
+													<input type="number" id="PRIORITY_LOW" class="txtPriority" />
+												</td>
+											</tr>
+											<tr>
+												<td>Negative</td>
+												<td>
+													< 0
+												</td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
-		    
 		</div>
+		<script src="jquery-1.12.0.min.js"></script>
+	    <script src="popup.js"></script>
 	</body>
 </html>
